fix: replace word-break with word-wrap

--- a/public/styles/tweet.scss
+++ b/public/styles/tweet.scss
@@ -30,7 +30,7 @@ article {
   .tweet-body {
     width: 96%;
     margin: auto;
-    word-break: break-all;
+    overflow-wrap: break-word;
   }
 
   .avatar {
